<resources>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Something went wrong, try again later.</string>

    <string name="arts_screen">ArtsScreen</string>
    <string name="detail_screen">ArtsScreen</string>
    <string name="arts_list">ArtsList</string>
    <string name="arts_loading">ArtsLoading</string>
    <string name="no_arts">No Arts for now!</string>
    <string name="art_item">ArtItem</string>
    <string name="collection">Collection</string>

    <string name="unknown">Unknown</string>
    <string name="save_to_photos">Save</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="title">Title</string>
    <string name="color">Color</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="production_places">Production Places</string>

    <string name="permission_denied">Please grant storage permission in Settings.</string>
    <string name="permission_denied_ios">Allow access to photos in Settings.</string>
    <string name="settings">Settings</string>
    <string name="saving_failed">Image not saved, try again later.</string>
    <string name="saving_success">Image saved.</string>
</resources>