appId: com.tewelde.rijksmuseum
---
- launchApp

- assertVisible: Collection
- tapOn: Collection

- tapOn:
    point: 25%,25%

- assertVisible: Back
- assertVisible: Save